# meson_link_test

./: README.md
mylib/: meson.build
mylib/src/: mylib.cpp
mylib/subprojects/freetype/: freetype.lib  meson.build
myproject/: meson.build
myproject/lib/: mylib.lib
myproject/src/: main.cpp
myproject/subprojects/mylib/: meson.build  mylib.lib
myproject/subprojects/mylib/include/: mylib.h
